NavBar text to left side as not centered correctly

--- a/styles.css
+++ b/styles.css
@@ -31,8 +31,8 @@ Dark Green #2B8F73 */
     padding: 2.5%;
     display: flex;
     color: white;
-    justify-content: center;
-    height: 1.5em; 
+    justify-content: flex-start;
+    height: 1.5em;
 
   }
 
